new icons, images and functionality

--- a/app/config.json
+++ b/app/config.json
@@ -1,9 +1,13 @@
 {
-	"global": {}, 
-	"env:development": {}, 
-	"env:test": {}, 
-	"env:production": {}, 
-	"os:ios": {}, 
-	"os:android": {}, 
-	"dependencies": {}
+    "global": {},
+    "env:development": {},
+    "env:test": {},
+    "env:production": {},
+    "os:ios": {},
+    "os:android": {},
+    "dependencies": {
+        "to.t10.nextPass": "1.0",
+        "to.t10.appPrefs": "1.0",
+        "to.t10.listLocations": "1.0"
+    }
 }
