Updates to core base = custom notifications and editing cities, local notify
Signed-off-by: Ketan Majmudar <ket@spiritquest.co.uk>

--- a/app/config.json
+++ b/app/config.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "to.t10.nextPass": "1.0",
         "to.t10.appPrefs": "1.0",
-        "to.t10.listLocations": "1.0"
+        "to.t10.listLocations": "1.0",
+        "uk.co.spiritquest.customActivityMessageIndicator": "1.0"
     }
 }
